--- a/environment.yml
+++ b/environment.yml
@@ -3,171 +3,171 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - appnope=0.1.0=py38_1001
-  - argon2-cffi=20.1.0=py38haf1e3a3_1
-  - async_generator=1.10=py_0
-  - attrs=20.2.0=pyh9f0ad1d_0
-  - backcall=0.2.0=py_0
-  - bleach=3.2.1=py_0
-  - boost-cpp=1.74.0=he5d75e3_0
-  - branca=0.4.1=py_0
-  - brotlipy=0.7.0=py38h64e0658_1000
-  - bzip2=1.0.8=haf1e3a3_3
-  - c-ares=1.16.1=haf1e3a3_3
-  - ca-certificates=2020.6.20=hecda079_0
-  - cairo=1.16.0=ha8983da_1005
-  - certifi=2020.6.20=py38h5347e94_2
-  - cffi=1.14.1=py38hc4dd44e_0
-  - cfitsio=3.470=hdf94aef_6
-  - chardet=3.0.4=py38h32f6830_1006
-  - click=7.1.2=pyh9f0ad1d_0
-  - click-plugins=1.1.1=py_0
-  - cligj=0.5.0=py_0
-  - curl=7.71.1=hcb81553_5
-  - cycler=0.10.0=py_2
-  - decorator=4.4.2=py_0
-  - defusedxml=0.6.0=py_0
-  - descartes=1.1.0=py_4
-  - entrypoints=0.3=py38_0
-  - expat=2.2.9=hb1e8313_2
-  - fiona=1.8.17=py38hcfd527e_0
-  - folium=0.11.0=py_0
-  - fontconfig=2.13.1=h79c0d67_1002
-  - freetype=2.10.2=h8da9a1a_0
-  - freexl=1.0.5=h0b31af3_1002
-  - gdal=3.1.2=py38hbe58a21_1
-  - geopandas=0.8.1=py_0
-  - geos=3.8.1=h4a8c4bd_0
-  - geotiff=1.6.0=h4e9c399_1
-  - gettext=0.19.8.1=h46ab8bc_1002
-  - giflib=5.2.1=h0b31af3_2
-  - glib=2.66.0=hdb5fb44_0
-  - hdf4=4.2.13=h84186c3_1003
-  - hdf5=1.10.6=nompi_haae91d6_101
-  - icu=67.1=hb1e8313_0
-  - idna=2.10=pyh9f0ad1d_0
-  - importlib-metadata=2.0.0=py_1
-  - importlib_metadata=2.0.0=1
-  - ipykernel=5.3.4=py38h5ca1d4c_0
-  - ipython=7.18.1=py38h5ca1d4c_0
-  - ipython_genutils=0.2.0=py38_0
-  - jedi=0.17.2=py38_0
-  - jinja2=2.11.2=pyh9f0ad1d_0
-  - joblib=0.16.0=py_0
-  - jpeg=9d=h0b31af3_0
-  - json-c=0.13.1=h575e443_1002
-  - jsonschema=3.2.0=py_2
-  - jupyter_client=6.1.7=py_0
-  - jupyter_core=4.6.3=py38_0
-  - jupyterlab_pygments=0.1.2=py_0
-  - kealib=1.4.13=h40102fb_1
-  - kiwisolver=1.2.0=py38ha0d09dd_0
-  - krb5=1.17.1=h75d18d8_3
-  - lcms2=2.11=h174193d_0
-  - libblas=3.8.0=17_openblas
-  - libcblas=3.8.0=17_openblas
-  - libcurl=7.71.1=h9bf37e3_5
-  - libcxx=10.0.1=h5f48129_0
-  - libdap4=3.20.6=h993cace_1
-  - libedit=3.1.20191231=h0678c8f_2
-  - libev=4.33=haf1e3a3_1
-  - libffi=3.2.1=hb1e8313_1007
-  - libgdal=3.1.2=h6dfbaa8_1
-  - libgfortran=4.0.0=3
-  - libgfortran4=7.5.0=h1565451_3
-  - libiconv=1.16=haf1e3a3_0
-  - libkml=1.3.0=h8ca2c65_1012
-  - liblapack=3.8.0=17_openblas
-  - libnetcdf=4.7.4=nompi_hc5b2cf3_105
-  - libnghttp2=1.41.0=h7580e61_2
-  - libopenblas=0.3.10=openmp_h63d9170_4
-  - libpng=1.6.37=hb0a8c7a_2
-  - libpq=12.3=h489d428_0
-  - libsodium=1.0.18=h1de35cc_0
-  - libspatialindex=1.9.3=h4a8c4bd_3
-  - libspatialite=4.3.0a=h231dce8_1039
-  - libssh2=1.9.0=h8a08a2b_5
-  - libtiff=4.1.0=h2ae36a8_6
-  - libwebp-base=1.1.0=h0b31af3_3
-  - libxml2=2.9.10=h2c6e4a5_2
-  - llvm-openmp=10.0.1=h28b9765_0
-  - lz4-c=1.9.2=hb1e8313_3
-  - markupsafe=1.1.1=py38h64e0658_1
-  - matplotlib-base=3.3.1=py38haed9462_1
-  - mistune=0.8.4=py38h1de35cc_1001
-  - munch=2.5.0=py_0
-  - nb_conda=2.2.1=py38_1
-  - nb_conda_kernels=2.3.0=py38_0
-  - nbclient=0.5.1=py_0
-  - nbconvert=6.0.7=py38_0
-  - nbformat=5.0.8=py_0
-  - ncurses=6.2=hb1e8313_1
-  - nest-asyncio=1.4.1=py_0
-  - networkx=2.5=py_0
-  - notebook=6.1.4=py38_0
-  - olefile=0.46=py_0
-  - openjpeg=2.3.1=h254dc36_3
-  - openssl=1.1.1h=haf1e3a3_0
-  - osmnx=0.16.0=pyh9f0ad1d_0
-  - packaging=20.4=py_0
-  - pandas=1.1.2=py38h11c0d25_0
-  - pandoc=2.11=h0dc7051_0
-  - pandocfilters=1.4.2=py38_1
-  - parso=0.7.0=py_0
-  - pcre=8.44=h4a8c4bd_0
-  - pexpect=4.8.0=py38_1
-  - pickleshare=0.7.5=py38_1001
-  - pillow=7.2.0=py38h83dc5e5_1
-  - pip=20.2.3=py_0
-  - pixman=0.38.0=h01d97ff_1003
-  - poppler=0.89.0=h3232a60_1
-  - poppler-data=0.4.9=1
-  - postgresql=12.3=h62ab893_0
-  - proj=7.1.0=h45baca5_1
-  - prometheus_client=0.8.0=py_0
-  - prompt-toolkit=3.0.8=py_0
-  - ptyprocess=0.6.0=py38_0
-  - pycparser=2.20=pyh9f0ad1d_2
-  - pygments=2.7.1=py_0
-  - pyopenssl=19.1.0=py_1
-  - pyparsing=2.4.7=pyh9f0ad1d_0
-  - pyproj=2.6.1.post1=py38hf032eb0_1
-  - pyrsistent=0.17.3=py38haf1e3a3_0
-  - pysocks=1.7.1=py38h32f6830_1
-  - python=3.8.5=hfc71d35_7_cpython
-  - python-dateutil=2.8.1=py_0
-  - python_abi=3.8=1_cp38
-  - pytz=2020.1=pyh9f0ad1d_0
-  - pyzmq=19.0.2=py38hb1e8313_1
-  - readline=8.0=h0678c8f_2
-  - requests=2.24.0=pyh9f0ad1d_0
-  - rtree=0.9.4=py38h08f867b_1
-  - scikit-learn=0.23.2=py38hfde8033_0
-  - scipy=1.5.2=py38h1402333_0
-  - send2trash=1.5.0=py38_0
-  - setuptools=49.6.0=py38h32f6830_0
-  - shapely=1.7.1=py38h8918236_0
-  - six=1.15.0=pyh9f0ad1d_0
-  - sqlite=3.33.0=h960bd1c_0
-  - tbb=2019.9=ha1b3eb9_1
-  - terminado=0.9.1=py38_0
-  - testpath=0.4.4=py_0
-  - threadpoolctl=2.1.0=pyh5ca1d4c_0
-  - tiledb=2.0.8=h8973ade_0
-  - tk=8.6.10=hb0a8c7a_0
-  - tornado=6.0.4=py38h64e0658_1
-  - traitlets=5.0.5=py_0
-  - tzcode=2020a=h0b31af3_0
-  - urllib3=1.25.10=py_0
-  - wcwidth=0.2.5=py_0
-  - webencodings=0.5.1=py38_1
-  - wheel=0.35.1=pyh9f0ad1d_0
-  - xerces-c=3.2.3=h0a0444a_1
-  - xz=5.2.5=haf1e3a3_1
-  - zeromq=4.3.3=hb1e8313_3
-  - zipp=3.3.1=py_0
-  - zlib=1.2.11=h7795811_1009
-  - zstd=1.4.5=h289c70a_2
+  - appnope=0.1.0
+  - argon2-cffi=20.1.0
+  - async_generator=1.10
+  - attrs=20.2.0
+  - backcall=0.2.0
+  - bleach=3.2.1
+  - boost-cpp=1.74.0
+  - branca=0.4.1
+  - brotlipy=0.7.0
+  - bzip2=1.0.8
+  - c-ares=1.16.1
+  - ca-certificates=2020.6.20
+  - cairo=1.16.0
+  - certifi=2020.6.20
+  - cffi=1.14.1
+  - cfitsio=3.470
+  - chardet=3.0.4
+  - click=7.1.2
+  - click-plugins=1.1.1
+  - cligj=0.5.0
+  - curl=7.71.1
+  - cycler=0.10.0
+  - decorator=4.4.2
+  - defusedxml=0.6.0
+  - descartes=1.1.0
+  - entrypoints=0.3
+  - expat=2.2.9
+  - fiona=1.8.17
+  - folium=0.11.0
+  - fontconfig=2.13.1
+  - freetype=2.10.2
+  - freexl=1.0.5
+  - gdal=3.1.2
+  - geopandas=0.8.1
+  - geos=3.8.1
+  - geotiff=1.6.0
+  - gettext=0.19.8.1
+  - giflib=5.2.1
+  - glib=2.66.0
+  - hdf4=4.2.13
+  - hdf5=1.10.6
+  - icu=67.1
+  - idna=2.10
+  - importlib-metadata=2.0.0
+  - importlib_metadata=2.0.0
+  - ipykernel=5.3.4
+  - ipython=7.18.1
+  - ipython_genutils=0.2.0
+  - jedi=0.17.2
+  - jinja2=2.11.2
+  - joblib=0.16.0
+  - jpeg=9d
+  - json-c=0.13.1
+  - jsonschema=3.2.0
+  - jupyter_client=6.1.7
+  - jupyter_core=4.6.3
+  - jupyterlab_pygments=0.1.2
+  - kealib=1.4.13
+  - kiwisolver=1.2.0
+  - krb5=1.17.1
+  - lcms2=2.11
+  - libblas=3.8.0
+  - libcblas=3.8.0
+  - libcurl=7.71.1
+  - libcxx=10.0.1
+  - libdap4=3.20.6
+  - libedit=3.1.20191231
+  - libev=4.33
+  - libffi=3.2.1
+  - libgdal=3.1.2
+  - libgfortran=4.0.0
+  - libgfortran4=7.5.0
+  - libiconv=1.16
+  - libkml=1.3.0
+  - liblapack=3.8.0
+  - libnetcdf=4.7.4
+  - libnghttp2=1.41.0
+  - libopenblas=0.3.10
+  - libpng=1.6.37
+  - libpq=12.3
+  - libsodium=1.0.18
+  - libspatialindex=1.9.3
+  - libspatialite=4.3.0a
+  - libssh2=1.9.0
+  - libtiff=4.1.0
+  - libwebp-base=1.1.0
+  - libxml2=2.9.10
+  - llvm-openmp=10.0.1
+  - lz4-c=1.9.2
+  - markupsafe=1.1.1
+  - matplotlib-base=3.3.1
+  - mistune=0.8.4
+  - munch=2.5.0
+  - nb_conda=2.2.1
+  - nb_conda_kernels=2.3.0
+  - nbclient=0.5.1
+  - nbconvert=6.0.7
+  - nbformat=5.0.8
+  - ncurses=6.2
+  - nest-asyncio=1.4.1
+  - networkx=2.5
+  - notebook=6.1.4
+  - olefile=0.46
+  - openjpeg=2.3.1
+  - openssl=1.1.1h
+  - osmnx=0.16.0
+  - packaging=20.4
+  - pandas=1.1.2
+  - pandoc=2.11
+  - pandocfilters=1.4.2
+  - parso=0.7.0
+  - pcre=8.44
+  - pexpect=4.8.0
+  - pickleshare=0.7.5
+  - pillow=7.2.0
+  - pip=20.2.3
+  - pixman=0.38.0
+  - poppler=0.89.0
+  - poppler-data=0.4.9
+  - postgresql=12.3
+  - proj=7.1.0
+  - prometheus_client=0.8.0
+  - prompt-toolkit=3.0.8
+  - ptyprocess=0.6.0
+  - pycparser=2.20
+  - pygments=2.7.1
+  - pyopenssl=19.1.0
+  - pyparsing=2.4.7
+  - pyproj=2.6.1.post1
+  - pyrsistent=0.17.3
+  - pysocks=1.7.1
+  - python=3.8.5
+  - python-dateutil=2.8.1
+  - python_abi=3.8
+  - pytz=2020.1
+  - pyzmq=19.0.2
+  - readline=8.0
+  - requests=2.24.0
+  - rtree=0.9.4
+  - scikit-learn=0.23.2
+  - scipy=1.5.2
+  - send2trash=1.5.0
+  - setuptools=49.6.0
+  - shapely=1.7.1
+  - six=1.15.0
+  - sqlite=3.33.0
+  - tbb=2019.9
+  - terminado=0.9.1
+  - testpath=0.4.4
+  - threadpoolctl=2.1.0
+  - tiledb=2.0.8
+  - tk=8.6.10
+  - tornado=6.0.4
+  - traitlets=5.0.5
+  - tzcode=2020a
+  - urllib3=1.25.10
+  - wcwidth=0.2.5
+  - webencodings=0.5.1
+  - wheel=0.35.1
+  - xerces-c=3.2.3
+  - xz=5.2.5
+  - zeromq=4.3.3
+  - zipp=3.3.1
+  - zlib=1.2.11
+  - zstd=1.4.5
   - pip:
     - absl-py==0.11.0
     - area==1.1.1
