--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - appnope=0.1.0
+#  - appnope=0.1.0
   - argon2-cffi=20.1.0
   - async_generator=1.10
   - attrs=20.2.0
@@ -73,7 +73,7 @@ dependencies:
   - libev=4.33
   - libffi=3.2.1
   - libgdal=3.1.2
-  - libgfortran=4.0.0
+#  - libgfortran=4.0.0
   - libgfortran4=7.5.0
   - libiconv=1.16
   - libkml=1.3.0
